[gd_scene load_steps=18 format=2]

[ext_resource path="res://addons/vehicle_controller_2d/top_down_vehicle.gd" type="Script" id=1]
[ext_resource path="res://HealthLevel.gd" type="Script" id=2]
[ext_resource path="res://drink_button.gd" type="Script" id=3]
[ext_resource path="res://drunk_simulation.gd" type="Script" id=4]
[ext_resource path="res://Cop.gd" type="Script" id=5]
[ext_resource path="res://Control.gd" type="Script" id=6]
[ext_resource path="res://Dialog.gd" type="Script" id=7]
[ext_resource path="res://Graphic Packs/Car game v4/NPC Vehicles/Police car/Police car.png" type="Texture" id=8]
[ext_resource path="res://Graphic Packs/Car game v4/Cars/Car blue/Car blue.png" type="Texture" id=9]
[ext_resource path="res://Tiled/Map.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.8, 0.172549, 0.172549, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.941176, 0.941176, 0.941176, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.345098, 0.14902, 0.00784314, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.941176, 0.941176, 0.941176, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.270588, 0.270588, 0.270588, 1 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 60.4718, 19.9827 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36, 30.25 )

[sub_resource type="Environment" id=7]
background_mode = 4
background_canvas_max_layer = 1
fog_depth_begin = 28.6
fog_depth_end = 0.0
dof_blur_near_enabled = true
dof_blur_near_amount = 0.0
dof_blur_near_quality = 2

[node name="Maindriving" type="Node2D"]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer2" type="CanvasLayer" parent="Control"]
layer = 5

[node name="Objectives" type="ColorRect" parent="Control/CanvasLayer2"]
margin_left = 852.0
margin_right = 1028.0
margin_bottom = 278.0
color = Color( 0.305882, 0.188235, 0.188235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control/CanvasLayer2/Objectives"]
margin_top = 9.0
margin_right = 176.0
margin_bottom = 49.0
text = "Hello"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="DrinkButton" type="Button" parent="Control/CanvasLayer"]
margin_left = 17.0
margin_top = 436.0
margin_right = 177.0
margin_bottom = 493.0
text = "Drink"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
health_bar_path = NodePath("../DrunkLevel")

[node name="ColorRect" type="ColorRect" parent="Control/CanvasLayer"]
margin_left = -10.0
margin_top = 517.0
margin_right = 1032.0
margin_bottom = 607.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLevel" type="ProgressBar" parent="Control/CanvasLayer"]
margin_left = 200.0
margin_top = 562.0
margin_right = 1014.0
margin_bottom = 593.0
rect_pivot_offset = Vector2( 405, 35 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 100.0
percent_visible = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrunkLevel" type="ProgressBar" parent="Control/CanvasLayer"]
margin_left = 200.0
margin_top = 524.0
margin_right = 1014.0
margin_bottom = 555.0
rect_pivot_offset = Vector2( 405, 35 )
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
value = 60.0
percent_visible = false
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
world_env_path = NodePath("../../WorldEnvironment")
car_path = NodePath("../../Car")

[node name="Dialog window" type="ColorRect" parent="Control/CanvasLayer"]
margin_left = -24.0
margin_top = 436.0
margin_right = 1050.0
margin_bottom = 658.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
leftbuttonpath = NodePath("Button")
rightbuttonpath = NodePath("Button2")

[node name="Button" type="Button" parent="Control/CanvasLayer/Dialog window"]
margin_left = 64.0
margin_top = 14.0
margin_right = 487.0
margin_bottom = 145.0
rect_pivot_offset = Vector2( -475, 0 )
text = "No sir ive had nothing to drink today"

[node name="Button2" type="Button" parent="Control/CanvasLayer/Dialog window"]
margin_left = 575.0
margin_top = 14.0
margin_right = 1006.0
margin_bottom = 145.0
rect_pivot_offset = Vector2( -444, -22 )
text = "Yea ive had a few to drink today"

[node name="Map" type="Sprite" parent="Control"]
position = Vector2( -267, -1609 )
scale = Vector2( 5, 5 )
texture = ExtResource( 10 )

[node name="Area2D" type="Area2D" parent="Control"]
visible = false

[node name="Roadpiece" type="ColorRect" parent="Control/Area2D"]
margin_left = 525.0
margin_top = -553.0
margin_right = 565.0
margin_bottom = -513.0
rect_scale = Vector2( 5.30281, 12.5608 )
color = Color( 0.282353, 0.282353, 0.282353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/Area2D/Roadpiece"]
margin_left = 17.5379
margin_top = 1.67184
margin_right = 57.5379
margin_bottom = 41.6718
rect_scale = Vector2( 0.117449, 0.128822 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Control/Area2D/Roadpiece"]
margin_left = 17.5379
margin_top = 9.6331
margin_right = 57.5379
margin_bottom = 49.6331
rect_scale = Vector2( 0.117449, 0.128822 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="Control/Area2D/Roadpiece"]
margin_left = 17.7265
margin_top = 17.674
margin_right = 57.7265
margin_bottom = 57.674
rect_scale = Vector2( 0.117449, 0.128822 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="Control/Area2D/Roadpiece"]
margin_left = 17.915
margin_top = 25.6352
margin_right = 57.915
margin_bottom = 65.6352
rect_scale = Vector2( 0.117449, 0.128822 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="Control/Area2D/Roadpiece"]
margin_left = 17.915
margin_top = 33.9945
margin_right = 57.915
margin_bottom = 73.9945
rect_scale = Vector2( 0.117449, 0.128822 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Side1" type="ColorRect" parent="Control/Area2D/Roadpiece"]
margin_left = -5.09161
margin_top = -7.62939e-06
margin_right = 34.9084
margin_bottom = 40.0
rect_scale = Vector2( 0.132535, 1 )
color = Color( 0.886275, 0.819608, 0.101961, 1 )

[node name="Area2D" type="Area2D" parent="Control/Area2D/Roadpiece/Side1"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Control/Area2D/Roadpiece/Side1/Area2D"]
position = Vector2( 486.62, 19.8235 )
shape = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Area2D/Roadpiece/Side1/Area2D"]
position = Vector2( -110.984, 19.8235 )
shape = SubResource( 6 )

[node name="Side2" type="ColorRect" parent="Control/Area2D/Roadpiece"]
margin_left = 40.1674
margin_top = 0.0796089
margin_right = 80.1674
margin_bottom = 40.0796
rect_scale = Vector2( 0.132535, 1 )
color = Color( 0.886275, 0.819608, 0.101961, 1 )

[node name="Car" type="RigidBody2D" parent="Control"]
position = Vector2( 623, 32 )
script = ExtResource( 1 )
input_steer_left = "left"
input_steer_right = "right"
input_accelerate = "up"
input_brake = "down"
acceleration = 11
max_forward_velocity = 450
steering_torque = 3.53
can_drift = false
wheel_grip_sticky = 0.593
wheel_grip_slippery = 0.671

[node name="ColorRect" type="ColorRect" parent="Control/Car"]
margin_left = -41.0
margin_top = -64.0
margin_right = 118.0
margin_bottom = 225.0
rect_scale = Vector2( 0.521107, 0.56188 )
color = Color( 0, 0.133333, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/Car/ColorRect"]
margin_left = -67.1647
margin_right = 208.835
margin_bottom = 253.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Car"]
position = Vector2( -4, -32 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Control/Car"]
position = Vector2( 3, 13 )
current = true
smoothing_enabled = true
smoothing_speed = 8.0

[node name="Cop" type="Area2D" parent="Control/Car"]
position = Vector2( -5, 404 )
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="Control/Car/Cop"]
margin_left = -36.0
margin_top = -276.0
margin_bottom = -113.0
rect_scale = Vector2( 2.28, 1 )
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/Car/Cop/ColorRect"]
margin_left = -17.1052
margin_right = 53.8948
margin_bottom = 160.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="Control"]
environment = SubResource( 7 )

[connection signal="pressed" from="Control/CanvasLayer/DrinkButton" to="Control/CanvasLayer/DrinkButton" method="_on_Button_pressed"]
[connection signal="dialogpass" from="Control/CanvasLayer/Dialog window" to="Control/Car" method="_on_Dialog_window_dialogpass"]
[connection signal="dialogpass" from="Control/CanvasLayer/Dialog window" to="Control/Car/Cop" method="_on_Dialog_window_dialogpass"]
[connection signal="pressed" from="Control/CanvasLayer/Dialog window/Button" to="Control/CanvasLayer/Dialog window" method="_on_Button_pressed"]
[connection signal="pressed" from="Control/CanvasLayer/Dialog window/Button2" to="Control/CanvasLayer/Dialog window" method="_on_Button2_pressed"]
[connection signal="body_entered" from="Control/Area2D/Roadpiece/Side1/Area2D" to="Control/CanvasLayer/DrinkButton" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Control/Area2D/Roadpiece/Side1/Area2D" to="Control/CanvasLayer/HealthLevel" method="_on_Area2D_body_entered"]
[connection signal="carstopped" from="Control/Car" to="Control/Car/Cop" method="_on_Car_carstopped"]
[connection signal="copvisible" from="Control/Car/Cop" to="Control/Car" method="_on_Cop_copvisible"]
[connection signal="startmessage" from="Control/Car/Cop" to="Control/CanvasLayer/Dialog window" method="_on_Cop_startmessage"]
